@@ -1,3 +1,12 @@
+2014-12-23  Chris Rorvick  <chris@rorvick.com>
+
+	Add support for T::xdr(XDR*)
+
+	Route the encoding/decoding through a template class and have
+	the primary implementation call into T::xdr(XDR*) and write
+	specializations for everything else.  Actually, not *everything*
+	yet, but eventually.
+
 2014-12-22  Chris Rorvick  <chris@rorvick.com>
 
 	Add support for std::list
